# dreadnought_urdf

./: CMakeLists.txt  README.md  dreadnought.urdf  package.xml  readme.md
launch/: display.launch.py
media/video/: 2024-01-28 21-23-16.mkv
rviz/: urdf.rviz
stl/: Claw_Right_Arm_V2.stl  DreadnaughtV1RArm-converted-binary.stl  DreadnoughtV1Legs-converted-binary.stl
stl/binary/: DreadnaughtV1larm-converted-binary.stl
stl/orignals/: DreadnaughtV1RArm.stl
urdf/: dreadnought.urdf
urdf_updater/: updater.py
